plugins/cargo/cargo-compact/samples/cargo-build-error.txt
   Compiling myapp v0.1.0 (/Users/dev/myapp)
error[E0425]: cannot find value `y` in this scope
 --> src/main.rs:5:20
  |
5 |     println!("{}", y);
  |                    ^ help: a local variable with a similar name exists: `x`

error[E0308]: mismatched types
 --> src/main.rs:7:18
  |
7 |     let z: u32 = "hello";
  |            ---   ^^^^^^^ expected `u32`, found `&str`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
